--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+1.4 (2024-01-18)
+----------------
+  * Keyring support now uses the session keyring by default, falling back to user keyring if session keyring does not exist
+  * Keyring timeout added to expire keys if unused for so many seconds
+
+1.3 (2024-01-16)
+  * Initial work on keyring support for caching lockbox passwords
+
 1.2 (2024-01-10)
 ----------------
   * Export/Import subsystem complete
