--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.6 (2024-01-19)
+  * Add 'make check"
+  * Fix importing
+  * Add -o flag
+
 1.4 (2024-01-18)
 ----------------
   * Keyring support now uses the session keyring by default, falling back to user keyring if session keyring does not exist
