--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
+1.7 (2024-01-20)
+----------------
+  * output qr-code to PNG file using '-o' option
+  * add 'make check' 'make install' 'make user_install' to makefile
+
 1.6 (2024-01-19)
+----------------
   * Add 'make check"
   * Fix importing
   * Add -o flag
